--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-ace": "^9.2.1",
     "react-dom": "^17.0.1",
+    "react-inlinesvg": "^2.2.2",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
